<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_transparent"
    android:padding="@dimen/margin_outer"
    tools:context=".main.ui.activityLogin.login.LoginFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_outer"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id = "@+id/include_header"
        layout="@layout/include_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_email"
        style="@style/editext_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/log_email"
        android:layout_marginTop="@dimen/margin_outer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include_header" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/log_email"
            android:paddingHorizontal="16dp"
            android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        style="@style/editext_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/log_password"
        app:endIconMode="password_toggle"
        android:layout_marginTop="@dimen/margin_between"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_email" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/log_password"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_between"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_password" >

        <CheckBox
            android:id="@+id/cb_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/color_principal_text"
            android:text="@string/log_remember"
            android:textColor="@color/color_principal_text"/>

        <TextView
            android:id="@+id/tv_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:text="@string/log_forgot"
            android:textColor="@color/color_action"
            android:gravity="end"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_between"
        android:text="@string/log_logIn"
        style="@style/button_generic"
        app:layout_constraintTop_toBottomOf="@id/ll_check"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/ll_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin_outer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_notAccount"
            android:textColor="@color/color_principal_text"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_register"
            android:textColor="@color/color_action"
            android:layout_marginStart="@dimen/margin_4dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>