<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_transparent"
    tools:context=".main.ui.activityMain.subject.register.RegisterSubjectFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_outer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id = "@+id/include_header"
                layout="@layout/include_header"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_field"
                style="@style/editext_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_subject_field"
                android:textColorHint="@color/color_secondary_text"
                android:layout_marginTop="@dimen/margin_between">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/register_subject_field"
                    android:paddingHorizontal="16dp"
                    android:imeOptions="actionNext" >
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_subject_name_description_2"/>

            <!-- Period -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/margin_extra_outer"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/register_subject_name_description_3"
                    android:textColor="@color/color_principal_text"
                    android:layout_gravity="clip_vertical"
                    android:layout_marginTop="@dimen/margin_between"/>

                <include
                    android:id = "@+id/include_spinner_subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margin_8dp"
                    layout="@layout/card_spinner"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_card_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8dp"
                android:orientation="vertical"
                android:background="@color/color_transparent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/recycler_card_subject" />

            <include
                android:id = "@+id/include_button"
                layout="@layout/include_button"
                app:layout_constraintTop_toBottomOf="@id/ll_check"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>