<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_transparent"
    tools:context=".main.ui.activityMain.register.school.RegisterSchoolFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_outer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:baselineAligned="false">

            <include
                android:id = "@+id/include_header"
                layout="@layout/include_header"/>

            <!-- CCT -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_cct"
                style="@style/editext_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_school_cct"
                android:textColorHint="@color/color_secondary_text"
                android:layout_marginTop="@dimen/margin_between">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_cct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:hint="@string/register_school_cct"
                    android:paddingHorizontal="16dp"
                    android:imeOptions="actionNext" >
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- School Term -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_school_term"
                style="@style/editext_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_school_term"
                android:textColorHint="@color/color_secondary_text"
                android:layout_marginTop="@dimen/margin_between">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_school_term"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_school_term"
                    android:textColor="@color/color_principal_text"
                    android:paddingHorizontal="16dp"
                    android:imeOptions="actionNext"
                    android:enabled="false">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- School Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_school_name"
                style="@style/editext_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_school_name"
                android:textColorHint="@color/color_secondary_text"
                android:layout_marginTop="@dimen/margin_between" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_school_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_school_name"
                    android:textColor="@color/color_principal_text"
                    android:paddingHorizontal="16dp"
                    android:imeOptions="actionNext"
                    android:enabled="false">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Shift -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_shift"
                style="@style/editext_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_school_shift"
                android:textColorHint="@color/color_secondary_text"
                android:layout_marginTop="@dimen/margin_between" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_shift"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_school_shift"
                    android:textColor="@color/color_principal_text"
                    android:paddingHorizontal="16dp"
                    android:imeOptions="actionNext"
                    android:enabled="false">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Type -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_between"
                android:baselineAligned="false">

                <include
                    android:id = "@+id/include_spinner_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/margin_8dp"
                    layout="@layout/card_spinner" />

                <include
                    android:id = "@+id/include_spinner_cycle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margin_8dp"
                    layout="@layout/card_spinner"/>

            </LinearLayout>

            <!-- Group -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_extra_outer"
                android:baselineAligned="false">

                <include
                    android:id = "@+id/include_spinner_grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/margin_8dp"
                    layout="@layout/card_spinner" />

                <include
                    android:id = "@+id/include_spinner_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/margin_8dp"
                    layout="@layout/card_spinner"/>

            </LinearLayout>

            <!-- Button -->
            <include
                android:id = "@+id/include_button"
                layout="@layout/include_button"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>